Fix constructor in test case